--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.9",
-    "uuidv4": "^6.2.6"
+    "request-promise-native": "^1.0.9"
   },
   "devDependencies": {
     "@types/chai": "^4.2.19",
